[gd_scene load_steps=5 format=3 uid="uid://mavmups1w1rr"]

[ext_resource type="Script" path="res://scripts/main.gd" id="1_lwx3j"]
[ext_resource type="PackedScene" uid="uid://w4k43bp3ecot" path="res://scenes/pile_up.tscn" id="2_fsj4h"]
[ext_resource type="PackedScene" uid="uid://bqgxagm81ux1" path="res://scenes/pile_down.tscn" id="2_t8fnk"]
[ext_resource type="PackedScene" uid="uid://bxp7oom05334p" path="res://scenes/player_deck.tscn" id="2_uhpk0"]

[node name="main" type="Node"]
script = ExtResource("1_lwx3j")

[node name="player1_deck" parent="." instance=ExtResource("2_uhpk0")]
position = Vector2(609, 537)
my_cards = true

[node name="player2_deck" parent="." instance=ExtResource("2_uhpk0")]
position = Vector2(119, 302)
rotation = 1.57607

[node name="player3_deck" parent="." instance=ExtResource("2_uhpk0")]
position = Vector2(999, 307)
rotation = -1.55882

[node name="player4_deck" parent="." instance=ExtResource("2_uhpk0")]
position = Vector2(607, 94)
rotation = -3.12565

[node name="pile_down" parent="." instance=ExtResource("2_t8fnk")]
position = Vector2(550, 293)
scale = Vector2(0.4, 0.4)

[node name="pile_up" parent="." instance=ExtResource("2_fsj4h")]
position = Vector2(678, 293)
scale = Vector2(0.4, 0.4)
